<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rgsystems.loantable.MainActivity">

    <LinearLayout
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="14dp"
        android:paddingRight="14dp"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@+id/txt_name"
            android:text="@string/lbl_name" />

        <EditText
            android:id="@+id/txt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lbl_name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:labelFor="@+id/txt_montoPrestamo"
                android:text="@string/lbl_monto_prestamo" />

            <EditText
                android:id="@+id/txt_montoPrestamo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_monto_prestamo"
                android:inputType="numberDecimal"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:labelFor="@+id/txt_cantidad_cuotas"
                android:text="@string/lbl_cantidad_cuotas" />

            <EditText
                android:id="@+id/txt_cantidad_cuotas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_cantidad_cuotas"
                android:inputType="number" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:labelFor="@+id/txt_interes_prestamo"
                android:text="@string/lbl_interes_restamo" />

            <EditText
                android:id="@+id/txt_interes_prestamo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/lbl_interes_restamo"
                android:inputType="numberDecimal"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:onClick="onClickButton"
            android:text="@string/btn_accept" />

    </LinearLayout>
</ScrollView>